# uvcontainer

./: README.md  compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
src/uv_docker_example/: __init__.py  app.py
