[project]
name = "uv-FASTAPI-docker-example"
version = "0.1.0"
description = "FASTAPI created with Astral.sh uv Python package management"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.112.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
hello = "uv_docker_example:hello"

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.2",
    "fastapi-cli>=0.0.5",
]
